# routes/post/mod_article.js
@@ -1,22 +1,22 @@
-import { Router } from 'express';
-import { getClientIp } from 'request-ip';
-import { jwtgetUser } from '../jwtgetUser';
-import { db_error } from '../../app';
-import { genEditLog } from '../../models/post/recordlog'
-import moment from 'moment';
-import mongoose from 'mongoose';
-import Article from '../../models/post/article';
-import postLog from '../../models/post/postlog';
+import { Router } from "express";
+import { getClientIp } from "request-ip";
+import { jwtgetUser } from "../jwtgetUser";
+import { db_error } from "../../app";
+import { genEditLog } from "../../models/post/recordlog";
+import moment from "moment";
+import mongoose from "mongoose";
+import Article from "../../models/post/article";
+import postLog from "../../models/post/postlog";
 
 const router = Router();
-router.post ('/', async (req,res) => {
+router.post ("/", async (req,res) => {
     var _response = { "result" : "ERR_SERVER_FAILED_TEMPORARILY" };
 
     /**
      * CHECK DATABASE
      */
-    if (!(db_error == null)) {
-        _response.result = 'ERR_DATABASE_NOT_CONNECTED';
+    if (!(db_error === null)) {
+        _response.result = "ERR_DATABASE_NOT_CONNECTED";
         res.status(500).json(_response);
         return;
     }
@@ -24,7 +24,7 @@ router.post ('/', async (req,res) => {
     const { userjwt, title, text } = req.body;
     var { target, tags, picture, link } = req.body;
     if (!(userjwt && target && title && text && tags)) {
-        _response.result = 'ERR_DATA_NOT_PROVIDED';
+        _response.result = "ERR_DATA_NOT_PROVIDED";
         res.status(412).json(_response);
         return;
     }
@@ -39,7 +39,7 @@ router.post ('/', async (req,res) => {
     }
     catch (err) {
         console.error(err);
-        _response.result = 'ERR_DATA_ARRAY_FORMAT_INVALID';
+        _response.result = "ERR_DATA_ARRAY_FORMAT_INVALID";
         _response.error = err.toString();
         res.status(412).json(_response);
         return;
@@ -60,7 +60,7 @@ router.post ('/', async (req,res) => {
     }
     catch (err) {
         console.error(err);
-        _response.result = 'ERR_TARGET_ID_FORMAT_INVALID';
+        _response.result = "ERR_TARGET_ID_FORMAT_INVALID";
         _response.error = err.toString();
         res.status(412).json(_response);
         return;
@@ -75,7 +75,7 @@ router.post ('/', async (req,res) => {
         }
     });
     if (!_article) {
-        _response.result = 'ERR_LOADING_TARGET_ARTICLE_FAILED';
+        _response.result = "ERR_LOADING_TARGET_ARTICLE_FAILED";
         res.status(409).json(_response);
         return;
     }
@@ -85,16 +85,16 @@ router.post ('/', async (req,res) => {
      */
     const SAVE_LOG = (_response) => {
         const createLog = new postLog ({
-            timestamp : moment().format('YYYY-MM-DD HH:mm:ss'), 
+            timestamp : moment().format("YYYY-MM-DD HH:mm:ss"), 
             causeby : jwtuser.user.email,
             originip : getClientIp(req),
-            category : 'MOD_ARTICLE',
+            category : "MOD_ARTICLE",
             details : _article.content
         });
         createLog.save((err) => {
             if (err) console.error(err);
         });
-    }
+    };
 
     /**
      * UPDATE ARTICLE OBJECT USING PREVIOUS OBJECT
@@ -109,7 +109,7 @@ router.post ('/', async (req,res) => {
             picture,
             link
         }
-    }
+    };
 
     /**
      * SAVE ARTICLE INFO ON DATABASE
@@ -119,16 +119,16 @@ router.post ('/', async (req,res) => {
     }, {
         "modify": _article.modify,
         "content": _article.content,
-        "timestamp" : moment().format('YYYY-MM-DD HH:mm:ss')
+        "timestamp" : moment().format("YYYY-MM-DD HH:mm:ss")
     }, async (err) => {
         if (err) {
-            _response.result = 'ERR_EDIT_ARTICLE_FAILED';
+            _response.result = "ERR_EDIT_ARTICLE_FAILED";
             _response.error = err;
             res.status(500).json(_response);
             return;
         }
 
-        _response.result = 'SUCCEED_ARTICLE_EDITED';
+        _response.result = "SUCCEED_ARTICLE_EDITED";
         res.status(200).json(_response);
         SAVE_LOG(_response);
     });
