# routes/post/mod_comment.js
@@ -1,22 +1,22 @@
-import { Router } from 'express';
-import { getClientIp } from 'request-ip';
-import { jwtgetUser } from '../jwtgetUser';
-import { db_error } from '../../app';
-import { genEditLog } from '../../models/post/recordlog'
-import moment from 'moment';
-import mongoose from 'mongoose';
-import Comment from '../../models/post/comment';
-import postLog from '../../models/post/postlog';
+import { Router } from "express";
+import { getClientIp } from "request-ip";
+import { jwtgetUser } from "../jwtgetUser";
+import { db_error } from "../../app";
+import { genEditLog } from "../../models/post/recordlog";
+import moment from "moment";
+import mongoose from "mongoose";
+import Comment from "../../models/post/comment";
+import postLog from "../../models/post/postlog";
 
 const router = Router();
-router.post ('/', async (req,res) => {
+router.post ("/", async (req,res) => {
     var _response = { "result" : "ERR_SERVER_FAILED_TEMPORARILY" };
 
     /**
      * CHECK DATABASE
      */
-    if (!(db_error == null)) {
-        _response.result = 'ERR_DATABASE_NOT_CONNECTED';
+    if (!(db_error === null)) {
+        _response.result = "ERR_DATABASE_NOT_CONNECTED";
         res.status(500).json(_response);
         return;
     }
@@ -24,7 +24,7 @@ router.post ('/', async (req,res) => {
     const { userjwt, text } = req.body;
     var { target, picture} = req.body;
     if (!(userjwt && target && text)) {
-        _response.result = 'ERR_DATA_NOT_PROVIDED';
+        _response.result = "ERR_DATA_NOT_PROVIDED";
         res.status(412).json(_response);
         return;
     }
@@ -37,7 +37,7 @@ router.post ('/', async (req,res) => {
     }
     catch (err) {
         console.error(err);
-        _response.result = 'ERR_DATA_ARRAY_FORMAT_INVALID';
+        _response.result = "ERR_DATA_ARRAY_FORMAT_INVALID";
         _response.error = err.toString();
         res.status(412).json(_response);
         return;
@@ -58,7 +58,7 @@ router.post ('/', async (req,res) => {
     }
     catch (err) {
         console.error(err);
-        _response.result = 'ERR_TARGET_ID_FORMAT_INVALID';
+        _response.result = "ERR_TARGET_ID_FORMAT_INVALID";
         _response.error = err.toString();
         res.status(412).json(_response);
         return;
@@ -73,7 +73,7 @@ router.post ('/', async (req,res) => {
         }
     });
     if (!_comment) {
-        _response.result = 'ERR_LOADING_TARGET_COMMENT_FAILED';
+        _response.result = "ERR_LOADING_TARGET_COMMENT_FAILED";
         res.status(409).json(_response);
         return;
     }
@@ -83,16 +83,16 @@ router.post ('/', async (req,res) => {
      */
     const SAVE_LOG = (_response) => {
         const createLog = new postLog ({
-            timestamp : moment().format('YYYY-MM-DD HH:mm:ss'), 
+            timestamp : moment().format("YYYY-MM-DD HH:mm:ss"), 
             causeby : jwtuser.user.email,
             originip : getClientIp(req),
-            category : 'MOD_COMMENT',
+            category : "MOD_COMMENT",
             details : _comment.content
         });
         createLog.save((err) => {
             if (err) console.error(err);
         });
-    }
+    };
 
     /**
      * UPDATE ARTICLE OBJECT USING PREVIOUS OBJECT
@@ -102,7 +102,7 @@ router.post ('/', async (req,res) => {
     _comment.content = {
         text,
         picture
-    }
+    };
 
     /**
      * SAVE ARTICLE INFO ON DATABASE
@@ -112,16 +112,16 @@ router.post ('/', async (req,res) => {
     }, {
         "modify": _comment.modify,
         "content": _comment.content,
-        "timestamp" : moment().format('YYYY-MM-DD HH:mm:ss')
+        "timestamp" : moment().format("YYYY-MM-DD HH:mm:ss")
     }, async (err) => {
         if (err) {
-            _response.result = 'ERR_EDIT_COMMENT_FAILED';
+            _response.result = "ERR_EDIT_COMMENT_FAILED";
             _response.error = err;
             res.status(500).json(_response);
             return;
         }
 
-        _response.result = 'SUCCEED_COMMENT_EDITED';
+        _response.result = "SUCCEED_COMMENT_EDITED";
         res.status(200).json(_response);
         SAVE_LOG(_response);
     });
