# routes/post/new_comment.js
@@ -1,20 +1,20 @@
-import { Router } from 'express';
-import { getClientIp } from 'request-ip';
-import { jwtgetUser } from '../jwtgetUser';
-import { db_error } from '../../app';
-import moment from 'moment';
-import Comment from '../../models/post/comment';
-import postLog from '../../models/post/postlog';
+import { Router } from "express";
+import { getClientIp } from "request-ip";
+import { jwtgetUser } from "../jwtgetUser";
+import { db_error } from "../../app";
+import moment from "moment";
+import Comment from "../../models/post/comment";
+import postLog from "../../models/post/postlog";
 
 const router = Router();
-router.post ('/', async (req,res) => {
+router.post ("/", async (req,res) => {
     var _response = { "result" : "ERR_SERVER_FAILED_TEMPORARILY" };
 
     /**
      * CHECK DATABASE
      */
-    if (!(db_error == null)) {
-        _response.result = 'ERR_DATABASE_NOT_CONNECTED';
+    if (!(db_error === null)) {
+        _response.result = "ERR_DATABASE_NOT_CONNECTED";
         res.status(500).json(_response);
         return;
     }
@@ -22,7 +22,7 @@ router.post ('/', async (req,res) => {
     const { userjwt, target, text } =  req.body;
     var { picture } = req.body;
     if (!(userjwt && target && text)) {
-        _response.result = 'ERR_DATA_NOT_PROVIDED';
+        _response.result = "ERR_DATA_NOT_PROVIDED";
         res.status(412).json(_response);
         return;
     }
@@ -35,7 +35,7 @@ router.post ('/', async (req,res) => {
     }
     catch (err) {
         console.error(err);
-        _response.result = 'ERR_DATA_ARRAY_FORMAT_INVALID';
+        _response.result = "ERR_DATA_ARRAY_FORMAT_INVALID";
         _response.error = err.toString(); 
         res.status(412).json(_response);
         return;
@@ -55,7 +55,7 @@ router.post ('/', async (req,res) => {
      * GENERATE COMMENT OBJECT
      */
     const postComment = new Comment({
-        timestamp: moment().format('YYYY-MM-DD HH:mm:ss'),
+        timestamp: moment().format("YYYY-MM-DD HH:mm:ss"),
         target,
         content: {
             text,
@@ -69,29 +69,29 @@ router.post ('/', async (req,res) => {
      */
     const SAVE_LOG = (_response) => {
         const createLog = new postLog ({
-            timestamp : moment().format('YYYY-MM-DD HH:mm:ss'), 
+            timestamp : moment().format("YYYY-MM-DD HH:mm:ss"), 
             causeby : jwtuser.user.email,
             originip : getClientIp(req),
-            category : 'NEW_COMMENT',
+            category : "NEW_COMMENT",
             details : postComment.content
         });
         createLog.save((err) => {
             if (err) console.error(err);
         });
-    }
+    };
 
     /**
      * SAVE ARTICLE INFO ON DATABASE
      */
     await postComment.save(async (err) => {
         if (err) {
-            _response.result = 'ERR_POST_COMMENT_FAILED';
+            _response.result = "ERR_POST_COMMENT_FAILED";
             _response.error = err;
             res.status(500).json(_response);
             return;
         }
 
-        _response.result = 'SUCCEED_COMMENT_POSTED';
+        _response.result = "SUCCEED_COMMENT_POSTED";
         res.status(200).json(_response);
         SAVE_LOG(_response);
     });
